syntax = "proto3";

package kafkaconsumer;

option go_package = "./;kafkaconsumer";

service KafkaConsumer {
	rpc Call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
	string name = 1;
}

message CallResponse {
    uint64 code = 1;
    string msg = 2;
}
