syntax = "proto3";

package kafkaproducer;

option go_package = "./;kafkaproducer";

import "common/danmaku.proto";

service KafkaProducer {
    rpc PostKafka(PostRequest) returns (PostResponse) {};
}

message PostRequest {
        uint64 ChannelID = 1;
        common.Danmaku Danmaku = 2;
}

message PostResponse{
        uint64 code = 1;
        string msg = 2;
}
